[tool.poetry]
name = "pyproject-toml"
version = "0.10"
description = "\"A simple Streamlit app\""
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"
packages = [{include = "pyproject"}]

[tool.poetry.dependencies]
python = "3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
