[tool.poetry]
name = "my-streamlit-app"
version = "0.1.0"
description = "A simple Streamlit app"
authors = ["Reynaldo Lorenzo <engrlorenzo22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
